--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -15,6 +15,12 @@ COPY . .
 
 ENV NEXT_TELEMETRY_DISABLED 1
 
+# Build-time public API URL for the frontend.
+# This is passed in from CI via --build-arg NEXT_PUBLIC_API_URL=...
+# and baked into the Next.js bundle.
+ARG NEXT_PUBLIC_API_URL
+ENV NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
+
 RUN npm run build
 
 # Ensure public exists for standalone output (Next.js may not create it)
