--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,9 +31,7 @@ services:
       retries: 5
 
   api:
-    build:
-      context: ./apps/api
-      dockerfile: Dockerfile
+    image: 348117807191.dkr.ecr.ap-south-1.amazonaws.com/sentinelcloud-api:latest
     ports:
       - "4000:4000"
     environment:
@@ -59,9 +57,7 @@ services:
     restart: unless-stopped
 
   worker:
-    build:
-      context: ./apps/api
-      dockerfile: Dockerfile
+    image: 348117807191.dkr.ecr.ap-south-1.amazonaws.com/sentinelcloud-api:latest
     command: node dist/worker.js
     environment:
       - NODE_ENV=production
@@ -81,9 +77,7 @@ services:
     restart: unless-stopped
 
   web:
-    build:
-      context: ./apps/web
-      dockerfile: Dockerfile
+    image: 348117807191.dkr.ecr.ap-south-1.amazonaws.com/sentinelcloud-web:latest
     ports:
       - "3000:3000"
     environment:
