Complete optimization: Deploy web to Vercel, use managed services

--- a/.env.example
+++ b/.env.example
@@ -10,11 +10,15 @@ POSTGRES_USER=
 POSTGRES_PASSWORD=
 POSTGRES_DB=
 
-# MongoDB (Atlas)
+# MongoDB (Atlas - Free M0 tier)
+# Get from: https://cloud.mongodb.com
+# Format: mongodb+srv://username:password@cluster.mongodb.net/sentinelcloud
 MONGODB_URI=
 MONGODB_DB=
 
-# Redis
+# Redis (Redis Cloud - Free 30MB tier)
+# Get from: https://redis.com/try-free/
+# Format: redis://default:password@host:port
 REDIS_URL=
 REDIS_HOST=
 REDIS_PORT=
