Complete optimization and fix mixed content error

--- a/.env.example
+++ b/.env.example
@@ -36,6 +36,9 @@ SES_FROM_EMAIL=
 S3_BUCKET_NAME=
 
 # Frontend
+# For Vercel deployment: Set API_URL (not NEXT_PUBLIC_API_URL) in Vercel env vars
+# API_URL is used by the Vercel proxy to connect to EC2 backend
+# Example: API_URL=http://65.2.31.27
 NEXT_PUBLIC_API_URL=
 FRONTEND_URL=
 
